<resources>
    <string name="app_name">MyDietApp</string>
    <string name="mainString">오늘의 식사를 입력하세요</string>
    <string name="menuPlusBtn">메뉴 추가</string>
    <string name="gotoCalendarBtn">캘린더 보기</string>
    <string name="gotoMealBtn">식사 분석하기</string>


    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <string name="addSaveBtn">저장</string>
    <string name="loadImage">이미지 불러오기</string>
    <string name="menuName">메뉴 이름</string>
    <string name="menuAmount">먹은 양</string>
    <string name="menuReview">식단 점수</string>
    <string name="eatTime">식사 시간</string>
    <string name="eatPlace">식사 장소</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_map_api">AIzaSyDyB2Zhqcb-uNgsgRzOe5PXqsreIPffq_0</string>
    <string name="place_btn">장소 저장</string>
</resources>