<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:backgroundTint="@color/yellow"
    android:foregroundTint="@color/yellow"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="236dp"
        android:layout_height="188dp"
        android:layout_marginBottom="80dp"
        android:background="@color/yellow"
        android:backgroundTint="@color/yellow"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/menuAddBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainString"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/menuAddBtn"
        android:layout_width="111dp"
        android:layout_height="122dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/menu"
        android:padding="5dp"
        android:paddingBottom="8px"
        android:text="@string/menuPlusBtn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/calendarBtn"
        android:layout_width="111dp"
        android:layout_height="122dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/cal"
        android:padding="5dp"
        android:text="@string/gotoCalendarBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mealAnalysis"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/mealAnalysis"
        android:layout_width="111dp"
        android:layout_height="122dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/analy"

        android:text="@string/gotoMealBtn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />


</androidx.constraintlayout.widget.ConstraintLayout>